--- a/local/package.json
+++ b/local/package.json
@@ -11,14 +11,32 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:remote-android-companion.helloWorld"
+		"onView:remote-android"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
-		"commands": [
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"icon": "$(device-mobile)",
+					"id": "remote-android-container",
+					"title": "Remote Android"
+				}
+			]
+		},
+		"views": {
+			"remote-android-container": [
+				{
+					"id": "remote-android",
+					"name": "Remote Android",
+					"icon": "$(device-mobile)"
+				}
+			]
+		},
+		"viewsWelcome": [
 			{
-				"command": "remote-android-companion.helloWorld",
-				"title": "Hello World"
+				"view": "remote-android",
+				"contents": "Welcome to Remote Android Debugging. Your connected devices will show up here."
 			}
 		]
 	},
@@ -49,5 +67,8 @@
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-node-externals": "^3.0.0"
+	},
+	"dependencies": {
+		"remote-adb": "^2.1.0"
 	}
 }
