--- a/local/package.json
+++ b/local/package.json
@@ -62,6 +62,18 @@
 					"command": "remote-android.disconnectDevice",
 					"when": "viewItem =~ /;connected;/",
 					"group": "inline@2"
+				},
+				{
+					"command": "remote-android.removeTcpDevice",
+					"when": "viewItem =~ /;removable;/"
+				},
+				{
+					"command": "remote-android.connectDevice",
+					"when": "viewItem =~ /;disconnected;/"
+				},
+				{
+					"command": "remote-android.disconnectDevice",
+					"when": "viewItem =~ /;connected;/"
 				}
 			]
 		},
@@ -75,7 +87,7 @@
 			},
 			{
 				"command": "remote-android.disconnectDevice",
-				"title": "Disconnect",
+				"title": "Disconnect from Remote",
 				"shortTitle": "Disconnect",
 				"icon": "$(debug-disconnect)",
 				"enablement": "view == remote-android"
