Add extensionKind to make sure this extension runs on the local machine

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"onView:remote-adb"
 	],
 	"main": "./dist/extension.js",
+	"extensionKind": [
+		"ui"
+	],
 	"contributes": {
 		"viewsContainers": {
 			"activitybar": [
