Only show up view when connected to remote

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 				{
 					"id": "remote-adb",
 					"name": "Remote Android",
-					"icon": "$(device-mobile)"
+					"icon": "$(device-mobile)",
+					"when": "remoteName"
 				}
 			]
 		},
